# cssfinder_backend_rust

./: CHANGELOG.md  Cargo.toml  compile_with_avx2.cmd  complex_array.json  main.ipynb  pyproject.toml  results.json  run_profiler.cmd
.github/workflows/: deploy_to_test_pypi.yml
scripts/: release.py  version.py
src/: lib.rs  main.rs  naive.rs  pure.rs  shared.rs
test/test_python/: test_conform.py
